--- a/responsive.css
+++ b/responsive.css
@@ -1,61 +1,51 @@
 header, body{
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+    flex-wrap: wrap;
 }
 
 @media screen and (max-width: 411px) {
 
 	.div2{
-      margin-right: 0px;
-      margin-left: 0px;
+		margin-right: 0px;
+        margin-left: 0px;
     }
 
 @media screen and (max-width: 640px) {
 
 	.header {
-		 width: 100%;
-		 height: 100%;
-		 display: flex; 
-		 float:center;
+		width: 100%;
+	    height: 100%;
+	    display: flex; 
 	}
 
 	.logo_box{
 		position: relative;
 		top: 0px;	
-		float: center;
 		width: 100%;
 		display: block;
 		margin-top: 0px;
 		margin-bottom: 0px;
-
     }
 
 	.logo {
 		width: 100%;
 		position: relative;	
-		  -webkit-transform: scale(0.5); /* Saf3.1+, Chrome */
-		   -moz-transform: scale(0.5); /* FF3.5+ */
-		    -ms-transform: scale(0.5); /* IE9 */
-		     -o-transform: scale(0.5); /* Opera 10.5+ */
-		        transform: scale(0.5);
-	    
+	    -webkit-transform: scale(0.5); /* Saf3.1+, Chrome */
+	    -moz-transform: scale(0.5); /* FF3.5+ */
+	    -ms-transform: scale(0.5); /* IE9 */
+	    -o-transform: scale(0.5); /* Opera 10.5+ */
+	    transform: scale(0.5);
 	    top: 0px;
 	    right:0px;
-	    float: center;
 	}
 
-		.titles {
-	  text-align: center;
-	  float:center;
-	  
+	.titles {
+		text-align: center;
 	}
 
 	.keyimage_box.keyimage{
 		position: relative;
-		flex-wrap: wrap;
-		float: center;  
-
-
+		flex-wrap: wrap;  
     }
 
     .pics_box{
@@ -64,7 +54,6 @@ header, body{
 	    display:flex; /* To align .header's content side to side. */
 	    border: 2px solid #73AD21;
 	    top: 0px;	
-		float: center;
 		width: 100%;
 		display: block;
 		margin-top: 0px;
@@ -72,33 +61,33 @@ header, body{
     }
 
     .div1, .div2, .div3{
-    	float: center;
     	position: relative;
     	height: auto;
         display: block;
         width:100%;
-
     }
+
 @media screen and (min-width:641px) {
-    .keyimage_box
+	.keyimage_box
     .keyimage {
         max-width: 100%;
         position: relative;
         height: 100%;
     }
 
-        .pics_box{
+    .pics_box{
 	    width: 100%;
 	    height: 100%;
 	    display:flex; /* To align .header's content side to side. */
 	    border: 2px solid #73AD21;
 	    top: 0px;	
-		float: center;
-
     }
 
-
-
-
+    .logo_box{
+    	width: 100%;
+	    height: 100%;
+	    display:flex; /* To align .header's content side to side. */
+	    display: inline-block; 
+	}
 
 }
